<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cg_solver</name>
  <version>0.0.1</version>
  <description>Soluções para o Culling Games - Algoritmos de Busca</description>
  <maintainer email="aluno@faculdade.br">Aluno</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependências do ROS e do Projeto -->
  <depend>rclcpp</depend>
  <depend>cg_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
